# x-csl-updater

./: .gitignore  .hgflow  .hgignore  .hgtags  AGENTS.md  CMakeLists.txt  Description.cmake  Install-lindeployqt.cmake  Install-linpackage.cmake  Install-macdeployqt.cmake  Install-macpackage.cmake  Install-windeployqt.cmake  Install-winpackage.cmake  Install.cmake  LICENSE  Readme-eng.txt  Readme.txt  Release_Body.html  Release_Body.md  TRADEMARKS.md  X-CSL-Updater.pro  about.ui  base_steps.cpp  base_steps.h  copy_qtlibs.bat  english.qm  english.ts  generate_projVS2013x64.bat  index.cpp  index.h  info.cpp  mac-build-release.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project_vs2015x64.bat  project_vs2019x64.bat  qt-paths.json  qtenv.bat  (+20 more)
.github/workflows/: TEST_QT.yaml  _reusable_workflow.yaml  build_only.yaml  build_package_upload.yaml  make_draft_release.yaml
Licenses/: Qt-NOTICE.txt  Qt-SOURCE-CODE.txt  Qt-THIRD-PARTY-NOTICES.txt  README.txt
TestServer/: Dockerfile  docker-compose.yml  my-entrypoint.sh  nginx.conf  site.conf
ci/: README  build.py  configure.py  install.py
cmake/: DeployFolder.cmake  GenInfoFile.cmake  Install.cmake  Testing.cmake
docs/: CMakeLists.txt  Readme-eng.txt  Readme-ru.txt  changeLog.txt
src/: AltitudeDefs.cpp  AltitudeDefs.h  CMakeLists.txt  Definitions.h  IndexStep.cpp  IndexStep.h  PackageAdditionalInfo.cpp  PackageAdditionalInfo.h  PackageAdditionalInfo.ui  Single.h  UpdateStep.cpp  UpdateStep.h  about.cpp  about.h  about.ui  base_steps.cpp  base_steps.h  english.qm  file-list.pri  index.cpp  index.h  info.cpp  info.h  info.ui  lrelease.bat  lupdate.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_temp.ui  make_file_list.py  settings.cpp  settings.h  settings.ui  src.pro  types.h  update.cpp  update.h  x-csl-updater-win32.rc  (+5 more)
